web-infras/parser/tests/fixtures/babel/es2017/async-functions/invalid-escape-await/output.txt
[SyntaxError]: keyword can not have any escap unicode (1,21)
1|(async function() { aw\u0061it x })
 |                   ^
